@@ -284,3 +284,4 @@ Issue #2137149 by johnv: Removed workflow_tab_form code, since it is replaced by
 Issue #2137219 by johnv: Changed workflow_actions to support Workflow Field.
 Issue #2122541 by johnv: Fixed strict warnings in WorkflowScheduledTransition.
 Issue #2137149 by johnv: Changed Node Edit page to show workflow_transition_form instead of workflow_node_form.
+Issue #2019345 by johnv: Fixed notices on WorkflowDefaultWidget.
